# ra_mp64_srm_convert

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_on_release.yml
ramp64-srm-convert-lib/: Cargo.toml  LICENSE  README.md
ramp64-srm-convert-lib/src/: battery_file.rs  controller_pack.rs  controller_pack_file.rs  convert_params.rs  create.rs  create_srm.rs  game_pack.rs  grouping.rs  io.rs  lib.rs  path.rs  retroarch_srm.rs  rzip.rs  save_file.rs  split.rs  split_srm.rs  srm_file.rs  utils.rs
ramp64-srm-convert-lib/src/path/: battery.rs  controller_pack.rs
src/: controller_pack.rs  create_srm.rs  game_pack.rs  grouping.rs  logger.rs  main.rs  mempack.rs  retroarch_srm.rs  split_srm.rs
tests/: cli.rs
tests_common/: Cargo.toml
tests_common/src/: lib.rs
