[package]
name = "ra_mp64_srm_convert"
description = "A simple application to convert to and from Retroarch Mupen64 save file."
version = "0.9.2"
authors = ["Daniel Rehren <daniel.rehren.a@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/drehren/ra_mp64_srm_convert"
repository = "https://github.com/drehren/ra_mp64_srm_convert"
keywords = ["cli","util","retroarch","save"]
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
