[package]
name = "ra_mp64_srm_convert"
description = "A simple application to convert to and from Retroarch Mupen64 save file."
version = "0.10.0"
authors = ["Daniel Rehren <daniel.rehren.a@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/drehren/ra_mp64_srm_convert"
repository = "https://github.com/drehren/ra_mp64_srm_convert"
keywords = ["cli", "util", "retroarch", "save"]
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"

[dev-dependencies]
assert_cmd = "2.0.5"
assert_fs = "1.0.10"
predicates = "2.1.1"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
