[package]
name = "ra_mp64_srm_convert"
description = "A simple application to convert to and from Retroarch Mupen64 save file."
include = ["src/main.rs", "Cargo.toml", "LICENSE", "README.md"]
version = "1.1.1"
authors = ["Daniel Rehren <daniel.rehren.a@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/drehren/ra_mp64_srm_convert"
repository = "https://github.com/drehren/ra_mp64_srm_convert"
keywords = ["cli", "util", "retroarch", "save"]
license = "MIT"
categories = ["command-line-utilities"]

[workspace]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
ramp64-srm-convert-lib = { path = "ramp64-srm-convert-lib", version = "0.5" }
simplelog = "0.12"


[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
tests_common = { path = "tests_common" }

