[package]
name = "ramp64-srm-convert-lib"
description = "The library to build RetroArch Mupen64 SRM Converter."
version = "0.3.0"
authors = ["Daniel Rehren <daniel.rehren.a@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/drehren/ra_mp64_srm_convert"
repository = "https://github.com/drehren/ra_mp64_srm_convert"
keywords = ["util", "retroarch", "save"]
license = "MIT"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
log = "0.4"

[dev-dependencies]
assert_fs = "1.0.10"
predicates = "2.1.1"
