[package]
name = "ramp64-srm-convert-lib"
description = "The library to build RetroArch Mupen64 SRM Converter."
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
version = "0.5.0"
authors = ["Daniel Rehren <daniel.rehren.a@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/drehren/ra_mp64_srm_convert"
repository = "https://github.com/drehren/ra_mp64_srm_convert"
keywords = ["util", "retroarch", "save"]
license = "MIT"

[dependencies]
flate2 = "1.0" 
log = "0.4.20"

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"

